fixed user show page to reflect embed_link class and moved around login box so shrinks screen size without overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@ h1, h2, h3, h4, p, nav, a, small  {
 
 nav {
   text-align: center;
+  margin: 0 0 30px 0;
 }
 
 h1 {
@@ -26,6 +27,7 @@ h1 {
   text-align: center;
   letter-spacing: 10px;
 }
+
 
 h2, h3, h4, h5, h6 {
   color: #C78782;
@@ -185,7 +187,7 @@ div.article {
 
 div.show_user_content {
   font-family: inherit;
-  margin: 10px 10px 10px 10px;
+  margin: 20px 10px 10px 10px;
   padding: 10px 0;
   border-bottom: 1px #8AFFFF dotted;
 }
